feat(DockerManager): cleanup after migration